...
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ideaName"
                    android:textSize="14pt"
                    android:hint="@string/title"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

...
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/button"
                    android:onClick="btnEditOnClick"
                    android:tag="edit"
                    android:src="@drawable/ic_baseline_create_24px"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/desc"/>

            <TextView
                android:id="@+id/detailDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:textSize="8pt"
                android:hint="No description provided."/>

            <EditText
                android:id="@+id/descriptionText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:textSize="8pt"
...
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/tagButton"
                    android:onClick="manageTags"
                    android:src="@drawable/ic_add"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:id="@+id/tagText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:textSize="8pt"
...
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/collaboratorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="8pt"
                    android:hint="Collaborators"/>

            </LinearLayout>
...
        android:background="@color/colorPrimary"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/taskButton"
        android:onClick="manageTasks"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimary"
        android:text="Tasks"
...
