...
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_tag"
        android:onClick="onClickbtnBack" />-->

    <EditText
        android:id="@+id/et_tag"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Enter new Tag here..."
        app:layout_constraintTop_toBottomOf="@id/tagToolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_add_tag"
        />

    <Button
        android:id="@+id/btn_add_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
...
