...
            android:textAlignment="textStart"
            android:textSize="12pt"/>

        <TextView
            android:paddingStart="8dp"
            android:layout_marginTop="10dp"
            android:id="@+id/compTasks"
            android:textSize="10pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/plus"
...
