...
            </com.woxthebox.draglistview.DragListView>

        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_add"/>
...
