...
            android:layout_marginTop="16dp"
            android:text="@string/remove_user"
            android:textStyle="bold" />
        !-->

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_out"
...
